Updated timeline content.

--- a/templates/index.html
+++ b/templates/index.html
@@ -147,9 +147,7 @@
                   <h4 class="subheading">Beginning of Project...</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">The “Project Billboard” team comprising Chionh Hwai Teck (Arthur), Tan Jin and Toh Yue Feng was assembled and briefed:
-
-                  "Music is an undeniable part of our lives - we listen to music during commute, work, or even during the late sad hours in the morning. The best ones end up in the Billboard 200 chart, but here's a central question: is there a method to this madness that is being a chart-topper? 
+                  <p class="text-muted">The “Project Billboard” team was formed. The task was to deliver a model predicting if a song would be a Billboard hit.
                   </p>
                 </div>
               </div>
@@ -164,10 +162,7 @@
                   <h4 class="subheading">Exploring possibilities...</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Over dinner and drinks at Starbucks, intense conversation allowed the team to compose a game-plan:
-                  
-                  Spotify’s Application Programming Interfaces’ (APIs) accessibility and wealth of data easily convinced the team to use it for the project. Tasks at the end of the meeting included generating a list of songs from Spotify APIs and classifying if they were “hits” or
-                  “misses”, tracking songs’ performance on Billboard and creating a GitHub repository.
+                  <p class="text-muted">We had our first meeting at starbucks where we worked on the definition of “popularity”, identifying “bad songs” and rationalizing the scope of the project. Spotify’s Application Programming Interface (API) was chosen as our primary source of data.
                   </p>
                 </div>
               </div>
@@ -182,9 +177,7 @@
                   <h4 class="subheading">Song extraction and analysis...</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">The project hits a high note. Functions and for loops were coded to suck 4900+ songs from Spotify APIs, complete with information e.g. duration and features e.g. danceability. Care was also taken to ensure songs were not duplicated. With data in hand, the team was ready to go fortissimo with machine learning (e.g. Linear Regression, K Nearest Neighbors, XGBoost) and feature selection.
-
-                  At this point Jackie Tan, mastermind behind projects like this, was chiming in the Telegram chorus with advice and encouragement. Cheers to Jackie for starting the project and seeing it through with the team! 
+                  <p class="text-muted">The main code for collecting songs from Spotify APIs was up and running and we had our first dataset. We proceeded to try simple algorithms for hit/miss prediction, as well as scraping Billboard Hot 100 charts for unique hits. 
                   </p>
                 </div>
               </div>
@@ -199,7 +192,8 @@
                   <h4 class="subheading">Training of models...</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Certain machine learning models proved promising, with prediction accuracies ranging from 60% to 70%. The project was striking the right notes, with the team having established models and the dataset.</p>
+                  <p class="text-muted">Machine learning models proved decent, with accuracies of 60-70%. The next step was to tidy up our code and prepare a user-friendly interface.
+                  </p>
                 </div>
               </div>
             </li>
@@ -213,9 +207,7 @@
                   <h4 class="subheading">Product complete...</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">The team submitted its masterpiece for Project Billboard. Everything you see here was made for this. Every song you hear can be predicted (accurately) by this...hopefully (:
-
-                  Many hymns of praise for Dan, not just for his major contributions to the project but to our futures as aspiring coders too!
+                  <p class="text-muted">The project was ready for submission!
                   </p>
                 </div>
               </div>
