--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,9 @@
             <a class="nav-link" id="nav_about" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" id="nav_timeline" href="#timeline">Timeline</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" id="nav_team" href="#team">Team</a>
           </li>
           <li class="nav-item">
@@ -130,7 +133,39 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About Project Billboard</h2>
+          <h2 class="section-heading text-uppercase">About</h2>
+          <h3 class="section-subheading text-muted">"Music is an undeniable part of our lives"</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 ml-auto">
+          <p class="lead">"Music is an undeniable part of our lives - we listen to music during commute, work, or even to get over a heartbreak. The best ones end up in the Billboard 200 chart, but here's a central question:<br/> <b>Is there a method to this madness that is being a chart-topper?</b>
+          </p>
+        </div>
+        <div class="col-lg-4 mr-auto">
+          <p class="lead">The objective of this project is to build a model that can predict the potential of a song to be a billboard hit based on its features.<br/>This project involves the following:<br/>
+          <b>1. API calling and web scraping - Python3</b><br/>
+          <b>2. Data cleaning - Python</b><br/>
+          <b>3. Data reporting - Jupyter Notebook</b><br/>
+          <b>4. Machine learning - Python</b><br/>
+          </p>
+        </div>
+      </div>
+      <div class="text-center">
+        <a class="btn btn-xl" href="https://github.com/tjtanjin/project_billboard_model" target="_blank">
+          <i class="fab fa-github"></i>
+          Find out more!
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Timeline -->
+  <section id="timeline">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Timeline</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
@@ -139,12 +174,12 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/timeline/1.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2nd April 2019</h4>
-                  <h4 class="subheading">Beginning of Project...</h4>
+                  <h4 class="subheading">Our humble beginning</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">The “Project Billboard” team was formed. The task was to deliver a model predicting if a song would be a Billboard hit.
@@ -154,60 +189,60 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/timeline/2.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>18th April 2019</h4>
-                  <h4 class="subheading">Exploring possibilities...</h4>
+                  <h4 class="subheading">Exploring possibilities</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">We had our first meeting at starbucks where we worked on the definition of “popularity”, identifying “bad songs” and rationalizing the scope of the project. Spotify’s Application Programming Interface (API) was chosen as our primary source of data.
+                  <p class="text-muted">We had our first meeting at starbucks where we worked out the scope of the project and the resources to use. Spotify’s API was chosen as our primary source of data for song features.
                   </p>
                 </div>
               </div>
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/timeline/3.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>29th April 2019</h4>
-                  <h4 class="subheading">Song extraction and analysis...</h4>
+                  <h4 class="subheading">Song extraction & analysis</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">The main code for collecting songs from Spotify APIs was up and running and we had our first dataset. We proceeded to try simple algorithms for hit/miss prediction, as well as scraping Billboard Hot 100 charts for unique hits. 
+                  <p class="text-muted">The code for collecting song features from Spotify was completed and we had our first dataset. We proceeded to try simple algorithms for hit/miss prediction, as well as scraping billboard hot 100 charts for unique hits. 
                   </p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/timeline/4.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>6th May 2019</h4>
-                  <h4 class="subheading">Training of models...</h4>
+                  <h4 class="subheading">Model training & refining</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Machine learning models proved decent, with accuracies of 60-70%. The next step was to tidy up our code and prepare a user-friendly interface.
+                  <p class="text-muted">Machine learning models proved decent, with accuracies of 60-70%. The next step was to explore how we can refine the model and prepare a user-friendly interface.
                   </p>
                 </div>
               </div>
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/5.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/timeline/5.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>11th May 2019</h4>
-                  <h4 class="subheading">Product complete...</h4>
+                  <h4 class="subheading">Project deployed!</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">The project was ready for submission!
+                  <p class="text-muted">Our models have been deployed on a simple website with a user-friendly interface!
                   </p>
                 </div>
               </div>
@@ -219,7 +254,7 @@
   </section>
 
   <!-- Team -->
-  <section id="team">
+  <section class="bg-light" id="team">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
