--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
             <i class="fab fa-hubspot fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">K Nearest Neighbours</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">PULL THIS LOREM.</p>
           <button class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#knn_details">Learn more &raquo;</button>
         </div>
         <div class="col-md-4" style="height:405px;">
