--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
             <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Logistic Regression</h4>
-          <p class="text-muted">NO MORE LOREM.</p>
+          <p class="text-muted"><!--can add text here--></p>
           <button class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#logistic_regression_details">Learn more &raquo;</button>
         </div>
         <div class="col-md-4" style="height:405px;">
@@ -112,7 +112,7 @@
             <i class="fab fa-hubspot fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">K Nearest Neighbours</h4>
-          <p class="text-muted">PULL THIS LOREM.</p>
+          <p class="text-muted"><!--can add text here--></p>
           <button class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#knn_details">Learn more &raquo;</button>
         </div>
         <div class="col-md-4" style="height:405px;">
@@ -121,7 +121,7 @@
             <i class="fas fa-rocket fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">XGBoost</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted"><!--can add text here--></p>
           <button class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#xgboost_details">Learn more &raquo;</button>
         </div>
       </div>
@@ -166,7 +166,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Timeline</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted"><!--can add text here--></h3>
         </div>
       </div>
       <div class="row">
@@ -350,7 +350,8 @@
           </button>
         </div>
         <div class="modal-body">
-          Logistic Regression writeup
+          Independent variables → dependent binary result<br/>
+          To predict the probability of a binary occurence using methods such as logit function and Maximum Likelihood Estimation (MLE).
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal" style="margin-left:auto; margin-right:auto;">Close</button>
@@ -370,8 +371,8 @@
           </button>
         </div>
         <div class="modal-body">
-          Input: Continuous variables
-          Output: Discrete classification
+          Input: Continuous variables <br/>
+          Output: Discrete classification <br/>
           Brief Description: To classify a point A, its n nearest neighbors are found by calculating the “distances” (e.g. Euclidean) it has from other points. Nearest neighbors are points with the smallest “distances” from A. The classifications of these n nearest neighbors determine the classification of A.
         </div>
         <div class="modal-footer">
@@ -392,7 +393,7 @@
           </button>
         </div>
         <div class="modal-body">
-          XGBoost writeup
+            To implement gradient boosting machines such as stochastic gradient boosting and regularized gradient boosting.<br/>
         </div>
         <div class="modal-footer text-center">
           <button type="button" class="btn btn-primary" data-dismiss="modal" style="margin-left:auto; margin-right:auto;">Close</button>
@@ -406,7 +407,7 @@
     <div class="container bg-light">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Project Billboard 2019</span>
+          <span class="copyright">Copyright &copy; Project Billboard 2019. Powered by Heroku.</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
