Moved img files.

--- a/templates/index.html
+++ b/templates/index.html
@@ -174,7 +174,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="./img/1.png" alt="">
+                <img class="rounded-circle img-fluid" src="./static/img/1.png" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -189,7 +189,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="./img/2.png" alt="">
+                <img class="rounded-circle img-fluid" src="./static/img/2.png" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -204,7 +204,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="./img/3.png" alt="">
+                <img class="rounded-circle img-fluid" src="./static/img/3.png" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -219,7 +219,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="./img/4.png" alt="">
+                <img class="rounded-circle img-fluid" src="./static/img/4.png" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -234,7 +234,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="./img/5.png" alt="">
+                <img class="rounded-circle img-fluid" src="./static/img/5.png" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
