--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color:rgb(0,0,0,0.8);">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color:#EE82EE;">Project Billboard</a>
+      <a class="navbar-brand js-scroll-trigger" id="nav_title" href="#" style="color:#EE82EE;">Project Billboard</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
