--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Timeline</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Our Project Journey</h3>
         </div>
       </div>
       <div class="row">
@@ -179,7 +179,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2nd April 2019</h4>
-                  <h4 class="subheading">Our humble beginning</h4>
+                  <h4 class="subheading">Project commences!</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">The “Project Billboard” team was formed. The task was to deliver a model predicting if a song would be a Billboard hit.
