Corrected background display.

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead" style="background-image:url(http://oi63.tinypic.com/wb8odi.jpg); background-size: cover; margin:0;">
+  <header class="masthead" style="background-image:url(https://i.imgur.com/7vDxj04.gif); background-size: cover; margin:0;">
     <div class="container">
       <div class="intro-text">
         <div class="intro-heading text-uppercase">Song Popularity Predictor</div>
