fix: remove resizing of textarea

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
             <div class="input-group input-group-sm mb-3">
               <div class="input-group-prepend">
               </div>
-            <textarea class="form-control rounded-3" id="text_box" placeholder="Enter Song Name & Choose Model ->" style="height:30px;"aria-label="Enter Song Name"></textarea>
+            <textarea class="form-control rounded-3" id="text_box" placeholder="Enter Song Name & Choose Model ->" style="resize: none; height: 30px;"aria-label="Enter Song Name"></textarea>
             <select id="model_selection">
               <option value="logistic_regression">Logistic Regression</option>
               <option value="knn">K Nearest Neighbors</option>
