Fix: add new profile image url

--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://media.licdn.com/dms/image/C5103AQHzxSoSpkhQQg/profile-displayphoto-shrink_200_200/0?e=1568246400&v=beta&t=k1rsngSkKLXz5AyJQxFUD--2arxbkHfRxEyE_rreiqI" alt="">
+            <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5103AQHzxSoSpkhQQg/profile-displayphoto-shrink_400_400/0/1555003635753?e=1617235200&v=beta&t=l1D0IgQzggbdrK0ZwVOdt8KFl3K2fS2L8_F5pLd2mvM" alt="">
             <h4>Tan Jin</h4>
             <p class="text-muted">The Cool Kid</p>
             <ul class="list-inline social-buttons">
@@ -289,7 +289,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://scontent.fsin8-1.fna.fbcdn.net/v/t31.0-8/13254886_10209056212341918_6229900836130072372_o.jpg?_nc_cat=105&_nc_ht=scontent.fsin8-1.fna&oh=00c1d7ab2189027d58604d6bb495f053&oe=5D71A251" alt="">
+            <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5603AQHPfLBbDMin8w/profile-displayphoto-shrink_400_400/0/1592623744341?e=1617235200&v=beta&t=q0U1v42UaX-c-0nM53zJNy7qtjdVTlD1h0LhbfihQqo" alt="">
             <h4>Arthur Chionh</h4>
             <p class="text-muted">The Funny Kid</p>
             <ul class="list-inline social-buttons">
