--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5103AQHzxSoSpkhQQg/profile-displayphoto-shrink_400_400/0/1555003635753?e=1617235200&v=beta&t=l1D0IgQzggbdrK0ZwVOdt8KFl3K2fS2L8_F5pLd2mvM" alt="">
+            <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5103AQHzxSoSpkhQQg/profile-displayphoto-shrink_400_400/0/1555003635753?e=1617235200&v=beta&t=l1D0IgQzggbdrK0ZwVOdt8KFl3K2fS2L8_F5pLd2mvM" alt="Tan Jin">
             <h4>Tan Jin</h4>
             <p class="text-muted">The Cool Kid</p>
             <ul class="list-inline social-buttons">
@@ -289,7 +289,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5603AQHPfLBbDMin8w/profile-displayphoto-shrink_400_400/0/1592623744341?e=1617235200&v=beta&t=q0U1v42UaX-c-0nM53zJNy7qtjdVTlD1h0LhbfihQqo" alt="">
+            <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5603AQHPfLBbDMin8w/profile-displayphoto-shrink_400_400/0/1592623744341?e=1617235200&v=beta&t=q0U1v42UaX-c-0nM53zJNy7qtjdVTlD1h0LhbfihQqo" alt="Arthur Chionh">
             <h4>Arthur Chionh</h4>
             <p class="text-muted">The Funny Kid</p>
             <ul class="list-inline social-buttons">
@@ -313,7 +313,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://scontent.fsin8-2.fna.fbcdn.net/v/t1.0-9/59697866_864455247236670_473565967390081024_n.jpg?_nc_cat=103&_nc_ht=scontent.fsin8-2.fna&oh=970e73de7628675c3f3f210e635a789e&oe=5D6F4F9B" alt="">
+            <img class="mx-auto rounded-circle" src="https://scontent.fsin9-2.fna.fbcdn.net/v/t31.0-8/19390658_468913693457496_7140986707949885610_o.jpg?_nc_cat=110&ccb=2&_nc_sid=cdbe9c&_nc_ohc=YJYT655MB-AAX_KQ_yI&_nc_ht=scontent.fsin9-2.fna&oh=0e27ae4a68054b979bb7cf6bf1c77ee4&oe=603B67CA" alt="Toh Yue Feng">
             <h4>Toh Yue Feng</h4>
             <p class="text-muted">The Crazy Kid</p>
             <ul class="list-inline social-buttons">
